<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ContactsDetails</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    
    <string name="person_details">PERSON DETAILS</string>
    
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="action_sign_in">Sign In</string>
    <string name="prompt_email">User Name</string>
    <string name="sign_up">Sign Up</string>
    
    <string name="title_activity_home_page">HomePageActivity</string>
    <string name="submit">Submit to Contacts</string>
    <string name="phone_no">Phone Number</string>
    <string name="contact_name">Contact Name</string>
    <string name="email_id">Email ID</string>
    
    <string name="listnumber_txt">Mobile :</string>
    <string name="sync"> Sync Now </string>

</resources>
